

@startuml

!include skin.iuml

title
<font size=24 color=#000000>Class Diagram: ModuleModel</font>

endtitle

hide empty members

class LinkList {
}

class Parameter {
}

class ParameterMap {
}

class Port {
}

class Module {

}



Parameter"*" o-- ParameterMap
Parameter <|-- Link
Port o-- PortList
Link "*" o-- LinkList
ParameterMap "1" o-- Module
LinkList "1" o-- Module
PortList "2" o-- Module

@enduml
